# multi_agent_system

./: LICENSE  README.md  pyproject.toml
src/: environment.yml  main.py  requirements.txt
src/app/views/: main_window.py
src/docs/: LICENSE .md
